--- a/Desktop/Vem ser DBC/app-clima/app-clima/src/Header/Header.module.scss
+++ b/Desktop/Vem ser DBC/app-clima/app-clima/src/Header/Header.module.scss
@@ -1,6 +1,40 @@
 .container {
-  padding-top: 1rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+	padding: 2rem 0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.iconDiv {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.cityName {
+		font-size: 2rem;
+		color: #fafafa;
+	}
+}
+
+.inputDiv {
+	padding: 1.2rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 1rem;
+	background-color: transparent;
+	border: 2px solid rgba(255, 255, 255, 0.519);
+}
+
+input {
+	background-color: transparent;
+	border: none;
+	outline: none;
+	padding: 0rem 1rem;
+	color: #fafafa;
+}
+
+input::placeholder {
+	color: rgba(255, 255, 255, 0.519);
 }
